# my_project

./: CMakeLists.txt  Makefile  gitman.yml
Mk/: libs_flags.mk  recipe.mk
config_files/: 0-2-0.yaml  0-3-0.yaml  1-2-0.yaml  1-2-1.yaml  1-3-0.yaml  1-3-1.yaml  1s-2-1s.yaml  1s-3-1s.yaml  building.yaml  building1.yaml  building2.yaml  poles.yaml  small_poles.yaml  small_poles1.yaml  small_poles2.yaml
scripts/: plot_profiles.py  plot_trajectory.py
src/: main.cpp
